* Bumped res_demo_env RES version to 2024.01.01
* In public_certs, LetsEncrypt TLS certificates are now renewed every 60 days
* In res_demo_env, it is now optional whether EFS storage and VPC are retained when deleting the stack
* In demo_managed_ad, Windows AD management host now uses IMDS v2
* In res_demo, the BI stack now exports ServiceAccountUserDN

## [1.2.0] - 2024-01-30

### Added
* added a helper script to hpc_networking to keep up with region launches
* added pcluster/stig recipe to help with building STIG-compliant AMIs

### Fixed

### Changed

* efs_simple now supports launching in a single subnet
* efs_simple now allows selection of throughput mode between elastic and bursting
* updated pcluster/latest to version 3.8.0
* updated pcluster/try* to version 3.8.0
* updated pcluster/pcui to version 3.8.0
* demo_managed_ad now allows selection of AWS Managed Microsoft AD Enterprise edition
* user may choose whether to stop the AD admin instance after creating an AD using demo_managed_ad
* added support for ap-northeast-3, sa-east-1, af-south-1, ap-south-2, ap-southeast-3, ap-southeast-4, ca-west-1, eu-central-2, eu-south-2, il-central-1, and me-central- to hpc_large_scale
* added support for Stockholm region to tryhpc7a
* added support for Sydney region to tryhpc6a
* updated to res_demo_env to RES version 2024.01

### Removed

## [1.1.0] - 2023-11-13

### Added

* New recipe to mount an S3 bucket under ParallelCluster using S3 Mountpoint
* New recipe to build a Research and Engineering Studio on AWS demo environment
* New recipe to generate certs for a Route53-hosted domain using LetsEncrypt

### Fixed

* ParallelCluster recipes installing version 3.7.x or higher no longer support Ubuntu18 in dropdowns
* ParallelCluster recipes installing version 3.7.x or higher now support RHEL8 in dropdowns

### Changed

* HPC-scale networking recipe now supports GovCloud
* It is now optional to deploy subnets in a third AZ in the HPC-scale networking recipe