@@ -13,6 +13,7 @@ Metadata:
           - Architecture
           - QueueName
           - ComputeInstanceMax
+          - SharedStorageType
       - Label:
           default: Networking and Access
         Parameters:
@@ -64,6 +65,7 @@ Parameters:
       - ubuntu2004
       - ubuntu2204
       - rhel8
+      - rhel9
     Description: Cluster operating system
 
   Architecture:
@@ -83,10 +85,19 @@ Parameters:
     Description: Subnet for compute nodes. Private subnet is recommended. Should be in the same AZ as HeadNodeSubnetIp. Can even be the same value as HeadNodeSubnetId.
     Type: AWS::EC2::Subnet::Id
 
+  SharedStorageType:
+    Type: String
+    Default: "Ebs"
+    Description: Choose whether to use EFS for the cluster shared filesystem
+    AllowedValues:
+         - "Ebs"
+         - "Efs"
+
+
 Mappings:
   ParallelCluster:
     Constants:
-      Version: 3.8.0
+      Version: 3.9.0
   Recipes:
     Constants:
       Version: main
@@ -128,6 +139,7 @@ Resources:
           Os: !Ref OS
         HeadNode:
           InstanceType: !FindInMap [ InstanceTypeForArchitecture, HeadNode, !Ref Architecture ]
+          SharedStorageType: !Ref SharedStorageType
           Networking:
             SubnetId: !Ref HeadNodeSubnetId
           Ssh:
