@@ -25,6 +25,7 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/)
 * In res_demo_env, it is now optional whether EFS storage and VPC are retained when deleting the stack
 * In demo_managed_ad, Windows AD management host now uses IMDS v2
 * In res_demo, the BI stack now exports ServiceAccountUserDN
+* In pcluster/latest, ParallelCluster version is bumped to 3.9.0 and supported operating systems are refreshed
 
 ## [1.2.0] - 2024-01-30
 
